{
    "name": "IA_PlayerCombat",
    "maps": [
        {
            "name": "Combat",
            "id": "a9c11c12-41e8-471c-ab03-669baab2190a",
            "actions": [
                {
                    "name": "RightHand",
                    "type": "Button",
                    "id": "07d584f3-3ec0-4580-a954-57058f1dde3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftHand",
                    "type": "Button",
                    "id": "8090af23-39e8-4573-9efa-f7a43518ee84",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9ef15702-bd0c-4fe3-bbb0-02ba9b40fd84",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MK",
                    "action": "RightHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f728795a-d3f3-4cf6-bad6-c6f62023c38d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MK",
                    "action": "LeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MK",
            "bindingGroup": "MK",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}